appId: com.revenuecat.e2etests
---
- launchApp:
    clearState: true
- tapOn: Customer Info
- assertVisible: "Active Subscriptions: None"
- assertVisible: "Entitlements: None"
- tapOn: Offerings
- tapOn: default
- tapOn: Show paywall
- assertVisible: Get CatPrrro
- tapOn: "12" # Annual package selector
- tapOn: Subscribe now
- assertVisible: ".*Product: test_yearly.*"
- assertVisible: ".*Price: \\$11.99.*"
- assertVisible: ".*Phase: \\$11.99 for P1Y.*"
- tapOn: TEST VALID PURCHASE
- tapOn: Customer Info
- tapOn: Refresh
- assertVisible: "Subscription: test_yearly"
- assertVisible: "pro_cat: Active: true, Product: test_yearly"
